kubernetes/Namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    ambiente: #{Ambiente}#
    cliente: #{Namespace_cliente}#
    sistema: #{Namespace_sistema}#
  name: #{Namespace}#
