kubernetes/DeploymentSvc.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: #{Deployment_name}#
  namespace: #{Namespace}#
spec:
  replicas: #{Deployment_replicas}#
  selector:
    matchLabels:
      name: #{Deployment_name}#
  template:
    metadata:
      labels:
        name: #{Deployment_name}#
    spec:
      containers:
      - name: #{Deployment_containers_name}#
        image: '#{Deployment_containers_image}#'
        ports:
        - containerPort: 8088
          protocol: TCP
        volumeMounts:
        - name: configvolume
          mountPath: "/config"
          readOnly: true
        resources: 
            limits:
              cpu: #{Deployment_limits_cpu}#
              memory: #{Deployment_limits_memory}#
            requests:
              cpu: #{Deployment_requests_cpu}#
              memory: #{Deployment_requests_memory}#
        livenessProbe:
          tcpSocket:
            port: 8088
          initialDelaySeconds: 10
          periodSeconds: 15        
        terminationMessagePath: "/dev/termination-log"
        terminationMessagePolicy: File
        imagePullPolicy: Always
      volumes:
      - name: configvolume
        secret:
          secretName: #{Deployment_secretName}#
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 2147483647
status:
  observedGeneration: 8
  replicas: 2
  updatedReplicas: 2
  readyReplicas: 2
  availableReplicas: 2
  conditions:
  - type: Available
    status: 'True'
    reason: MinimumReplicasAvailable
    message: Deployment has minimum availability.
