kubernetes/DeploymentWeb.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: #{Deployment_name}#
  namespace: #{Namespace}#
spec:
  replicas: #{Deployment_replicas}#
  selector:
    matchLabels:
      name: '#{Deployment_name}#'
  template:
    metadata:
      labels:
        name: '#{Deployment_name}#'
    spec:
      containers:
      - name: #{Deployment_containers_name}#
        image: '#{Deployment_containers_image}#'
        ports:
        - containerPort: 8080
          protocol: TCP
        volumeMounts:
        - name: configvolume
          mountPath: '#{Deployment_volumeMountPath}#'
          readOnly: true
        resources: 
            limits:
              cpu: #{Deployment_limits_cpu}#
              memory: #{Deployment_limits_memory}#
            requests:
              cpu: #{Deployment_requests_cpu}#
              memory: #{Deployment_requests_memory}#
        livenessProbe:
          httpGet:
            path: "/live"
            port: 80
            scheme: HTTP
          initialDelaySeconds: 30
          timeoutSeconds: 1
          periodSeconds: 15
          successThreshold: 1
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: "/ready"
            port: 80
            scheme: HTTP
          initialDelaySeconds: 30
          timeoutSeconds: 1
          periodSeconds: 15
          successThreshold: 1
          failureThreshold: 3
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        imagePullPolicy: IfNotPresent
      volumes:
      - name: configvolume
        secret:
          secretName: #{Deployment_secretName}#
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
