kubernetes/Service.yaml
kind: Service
apiVersion: v1
metadata:
  name: #{Service_name}#
  namespace: #{Namespace}#
spec:
  ports:
    - protocol: TCP
      port: #{Service_tcp_port}#
      targetPort: #{Service_tcp_targetPort}#
  selector:
    name: #{Service_selector_name}#
  type: ClusterIP
  sessionAffinity: None
status:
  loadBalancer: {}
