kubernetes/Ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: #{Ingress_name}#
  namespace: #{Namespace}#
spec:
  rules:
    - host: #{Ingress_host}#
      http:
        paths:
          - pathType: ImplementationSpecific
            backend:
              service:
                name: #{Ingress_service_name}#
                port:
                  number: #{Ingress_service_port_number}#
