kubernetes/IngressComTls.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: #{Ingress_name}#
  namespace: #{Namespace}#
spec:
  ingressClassName: #{Ingress_className}#
  tls:
    - hosts:
        - #{Ingress_host}#
      secretName: #{Ingress_secretName}#
  rules:
    - host: #{Ingress_host}#
      http:
        paths:
          - pathType: ImplementationSpecific
            backend:
              service:
                name: #{Ingress_service_name}#
                port:
                  number: #{Ingress_service_port_number}#
